--- a/package.json
+++ b/package.json
@@ -1,8 +1,12 @@
 {
   "private": true,
   "engines": {
-    "node": ">=0.12.0"
+    "node": ">=5.5.0"
   },
+  "scripts": {
+   "start": "gulp serve",
+   "postinstall": "bower install"
+  }
   "devDependencies": {
     "babel-core": "^6.4.0",
     "babel-preset-es2015": "^6.3.13",
