--- a/bower.json
+++ b/bower.json
@@ -5,7 +5,12 @@
     "bootstrap-sass": "~3.3.5",
     "modernizr": "~2.8.1",
     "eonasdan-bootstrap-datetimepicker": "^4.17.37",
-    "bootstrap-star-rating": "^3.5.7"
+    "bootstrap-star-rating": "^3.5.7",
+    "jquery.steps": "^1.1.0",
+    "jQuery.smartWizard-vertical-bower": "*",
+    "twitter-bootstrap-wizard": "1.3.2",
+    "promise-js": "^0.0.6",
+    "toastr": "^2.1.2"
   },
   "overrides": {
     "bootstrap-sass": {
