--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
     "node": ">=5.5.0"
   },
   "scripts": {
-   "start": "gulp serve",
-   "postinstall": "bower install"
+    "start": "gulp serve",
+    "postinstall": "bower install"
   },
   "devDependencies": {
     "babel-core": "^6.4.0",
@@ -14,8 +14,10 @@
     "del": "^1.1.1",
     "gulp": "^3.9.0",
     "gulp-autoprefixer": "^3.0.1",
+    "gulp-awspublish": "^3.0.1",
     "gulp-babel": "^6.1.1",
     "gulp-cache": "^0.2.8",
+    "gulp-clean": "^0.3.2",
     "gulp-cssnano": "^2.0.0",
     "gulp-htmlmin": "^1.3.0",
     "gulp-if": "^1.2.5",
@@ -28,6 +30,7 @@
     "gulp-subtree": "^0.1.0",
     "gulp-uglify": "^1.1.0",
     "gulp-useref": "^3.0.0",
+    "gulp-util": "^3.0.7",
     "main-bower-files": "^2.5.0",
     "wiredep": "^2.2.2"
   }
