New publish commands
gulp publish-www and gulp publish-me
This is until we have a react sight or whatever we end up doing.

--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,5 @@ aws-credentials.json
 .awspublish-treasury.love
 .awspublish-www.treasury.love
 dist
+aws-credentials-me.json
+.awspublish-me.treasury.love
