--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "gulp-autoprefixer": "^3.0.1",
     "gulp-awspublish": "^3.0.1",
     "gulp-babel": "^6.1.1",
+    "gulp-buster": "^1.0.2",
     "gulp-cache": "^0.2.8",
+    "gulp-cache-bust": "^1.0.2",
     "gulp-clean": "^0.3.2",
     "gulp-cssnano": "^2.0.0",
     "gulp-htmlmin": "^1.3.0",
